A couple of very wip things, nothing production ready yet but feel like committing because I want to. Mostly in preparation for a rewrite of the update tsrg task. - TSRG ids - match file and tsrg object parsing - mappings verification now generates a file to easily view output.